fix missing quote
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39885 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/Resources/Spanish.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Spanish.lproj/Localizable.strings
@@ -194,7 +194,7 @@
 "Revert" = "Revertir";
 "also apply to files inside selection" = "Aplicar a las subcarpetas";
 "Permissions" = "Permisos";
-"Read" = "Leer;
+"Read" = "Leer";
 "Write" = "Escribir";
 "Execute" = "Ejecutar";
 "Owner_short" = "Proprietario";
